tests/clearmsg/tconsttypemismatch.nim
discard """
  line: 6
  errormsg: "type mismatch"
"""
# bug #2252
const foo: int = 1000 / 30
